[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "content-moderation-env"
version = "0.1.0"
description = "OpenEnv compliant moderation environment"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "openai",
    "openenv>=0.2.0",
]

[project.scripts]
server = "server.app:main"